2018-03-12  Ajay Saini  <sainiak@uci.edu>

	* Defined function to get input file from args

	* Created function to get output filename

	* Added a dedicated dispatch function which decides which converter to call

	* Working on writing more tests

2018-03-09  Ajay Saini  <sainiak@uci.edu>

	* Created new function for argument parsing

	* Define function to get relative path based on location of file

	* Move station_dict data to resources/stations.txt

	* Add function to read and parse stations.txt file

	* Worked on Interim Report presentation

2018-03-08  Ajay Saini  <sainiak@uci.edu>

	* Configured `jaws` with Travis-CI

	* Resolved bug in test file

	* Work in progress to refactor and functionalize code, to define more tests

2018-03-07  Ajay Saini  <sainiak@uci.edu>

	* Tests completed to check conversion of files for individual modules

	* Tests made compatible with all platforms and python versions

	* Working to refactor and functionalize code, to define more tests

2018-03-06  Ajay Saini  <sainiak@uci.edu>

	* Worked on test cases for jaws as well as individual modules

	* Tests completed for jaws.py to check format options works correctly as well as station_name option

2018-03-05  Ajay Saini  <sainiak@uci.edu>

	* PROMICE- created new dictionary to store station_names; latitude and longitude to hash values from promice_dict 

	* Work in progress on unit-tests

	* Debug level argument details added

2018-03-02  Ajay Saini  <sainiak@uci.edu>

	* 'unicode' data type added in encoding for text-valued variables to use strings not character arrays for netCDF4 files 

	* LICENSE file added

	* Added new fields in setup.py file to provide package description

	* entry_points added in meta.yaml file to include scripts

	* git tag -a 0.2.1 -m 'Panama Catshark: Implementing xarray and pandas'; git push --tags

2018-03-01  Ajay Saini  <sainiak@uci.edu>

	* Worked on conda package to include executables

	* Learnt about packaging python scripts
